[gd_scene load_steps=2 format=3 uid="uid://dy5w8h3m9vp7n"]

[ext_resource type="Script" path="res://Scripts/MainMenu.gd" id="1_1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.756863, 0.603922, 0.419608, 1)

[node name="MenuContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="MenuContent"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 72
text = "WORD RICE"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="MenuContent"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="StartButton" type="Button" parent="MenuContent"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.996078, 0.941176, 1)
theme_override_font_sizes/font_size = 28
text = "START GAME"

[node name="Spacer2" type="Control" parent="MenuContent"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Leaderboard" type="VBoxContainer" parent="MenuContent"]
layout_mode = 2

[node name="LeaderboardTitle" type="Label" parent="MenuContent/Leaderboard"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 32
text = "LEADERBOARD"
horizontal_alignment = 1

[node name="LeaderboardList" type="VBoxContainer" parent="MenuContent/Leaderboard"]
layout_mode = 2

